# AniBridge

./: .bumpversion.cfg  .dockerignore  .env.example  .gitattributes  .gitignore  .markdownlint.json  AGENTS.md  CONTRIBUTING.md  Dockerfile  LEGAL.md  MIGRATION_SUMMARY.md  Makefile  README.md  SECURITY.md  alembic.ini  context7.json  docker-compose.dev.yaml  docker-compose.yaml  nixpacks.toml  package.json  pnpm-workspace.yaml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.runtime.txt  requirements.txt  startup-script.sh  wrangler.toml
.codex/prompts/: speckit.specify.md
.github/: CODEOWNERS  CONTRIBUTING.md  README.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: 01-bug-report.yml  02-feature-request.yml  03-other.yml  config.yml
.github/instructions/: Markdown.instructions.md  Performance-Optimization-Best-Practices.instructions.md  containerization-docker-best-practices.instructions.md  github-actions-ci-cd-best-practices.instructions.md
.github/prompts/: folder-structure-blueprint-generator.prompt.md
.github/workflows/: codeowners-review.yml  cut-release.yml  format-and-run.yml  pr-test-feedback.yml  pr-title-conventional.yml  publish.yml  pylint-quality.yml  release-on-tag.yml  stale.yml  tests.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
alembic/: MIGRATIONS.md  env.py
alembic/versions/: 397fa0304f9f_initial_migration_with_existing_schema.py
app/: __init__.py  _version.py  cli.py  config.py  downloader.py  magnet.py  main.py  models.py  naming.py  probe_quality.py  qbittorrent.py  scheduler.py  terminal_logger.py  title_resolver.py  torznab.py
app/api/: __init__.py  health.py  legacy_downloader.py  qbittorrent.py  strm.py  torznab.py
app/core/: __init__.py  bootstrap.py  downloader.py  lifespan.py  scheduler.py
app/db/: __init__.py  base.py  migrations.py  models.py  session.py
app/domain/: __init__.py  models.py
app/infrastructure/: __init__.py  network.py  system_info.py  terminal_logger.py
app/providers/: __init__.py  base.py  registry.py
app/utils/: __init__.py  absolute.py  absolute_numbering.py  aniworld_compat.py  domain_resolver.py  http_client.py  logger.py  magnet.py  movie_year.py  naming.py  probe_quality.py  release_dates.py  strm.py  terminal.py  title_resolver.py  update_notifier.py
apps/api/: .env.example  Dockerfile  pyproject.toml  pytest.ini
docker/: compose.dev.vpn.yaml  compose.dev.yaml  compose.yaml  docker-compose.dev.vpn.yaml  docker-compose.dev.yaml  entrypoint.sh
docs/: .npmrc  DATABASE.md  DATABASE_QUICKSTART.md  EXAMPLE_NEW_MODEL.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  worker.ts
docs/.vitepress/: config.mts
docs/agents/: api.md  architecture.md  change-log.md  coding-standards.md  configuration.md  deployment.md  docs-site.md  (+9 more)
hooks/: hook-fake_useragent.py
scripts/: local_build_release.ps1  local_build_release.sh  setup-codex-overlay.sh  startup-script.sh
src/: worker.ts
tests/: conftest.py  test_absolute_numbering.py  test_aniworld_specials.py  test_config.py  test_cors.py  test_cut_release.py  test_downloader_episode.py  test_downloader_ytdlp.py  test_health.py  test_magnet.py  test_megakino_domain_resolver.py  test_megakino_sitemap.py  test_migrations.py  test_models.py  test_movie_year.py  test_naming_release_override.py  test_preview_absolute.py  test_qbit_torrents_add.py  test_qbittorrent_absolute.py  test_qbittorrent_misc.py  test_qbittorrent_more.py  test_qbittorrent_torrents.py  test_release_dates.py  test_sto_v2.py  test_strm_hls_rewrite.py  test_strm_proxy_auth.py  test_strm_proxy_endpoints.py  test_strm_scheduler.py  test_title_resolver.py  test_title_resolver_extra.py  test_title_resolver_megakino.py  test_title_resolver_sto.py  test_torznab.py  test_torznab_absolute.py  test_torznab_errors.py  test_torznab_specials_mapping.py  test_torznab_utils.py  test_update_notifier.py  test_version.py  test_voe_fallback.py
(+319 files in other folders)
