[build-system]
requires = ["setuptools>=61.0", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "anibridge"
version = "1.15.0"
description = "AniBridge - small utility to bridge aniworld.to site for anime releases to the *arr stack"
readme = "README.md"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
authors = [ { name = "Zzackllack" } ]
requires-python = ">=3.11"
classifiers = [
		"Programming Language :: Python :: 3",
		"Programming Language :: Python :: 3 :: Only",
		"Operating System :: OS Independent",
]
dependencies = [
    "aniworld>=3.5.2",
    "beautifulsoup4>=4.13.5",
    "fake-useragent>=2.2.0",
    "fastapi>=0.116.1",
    "loguru>=0.7.3",
    "packaging>=25.0",
    "pysocks>=1.7.1",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "pyyaml>=6.0.2",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.43",
    "sqlmodel>=0.0.24",
    "tqdm>=4.67.1",
    "uvicorn[standard]>=0.35.0",
    "uvloop>=0.21.0",
    "websockets>=15.0.1",
    "yt-dlp>=2025.8.27",
]

[project.urls]
Home = "https://github.com/Zzackllack/AniBridge"
Tracker = "https://github.com/Zzackllack/AniBridge/issues"

[tool.setuptools.packages.find]
where = ["app"]

