[build-system]
requires = ["setuptools>=61.0", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "anibridge"
version = "1.18.1"
description = "AniBridge - small utility to bridge AniWorld and Serienstream (s.to) catalogues to the *arr stack"
readme = "README.md"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
authors = [ { name = "Zzackllack" } ]
requires-python = ">=3.11"
classifiers = [
		"Programming Language :: Python :: 3",
		"Programming Language :: Python :: 3 :: Only",
		"Operating System :: OS Independent",
]
dependencies = [
    "aniworld<=3.6.3",
    "anyio>=4.10.0",
    "beautifulsoup4>=4.13.5",
    "black>=25.9.0",
    "bs4>=0.0.2",
    "bump2version>=1.0.1",
    "certifi>=2025.8.3",
    "charset-normalizer>=3.4.3",
    "click>=8.2.1",
    "editorconfig>=0.17.1",
    "fake-useragent>=2.2.0",
    "fastapi>=0.116.1",
    "h11>=0.16.0",
    "httptools>=0.6.4",
    "httpx>=0.28.1",
    "idna>=3.10",
    "jsbeautifier>=1.15.4",
    "loguru>=0.7.3",
    "mypy-extensions>=1.1.0",
    "npyscreen>=4.10.5",
    "packaging>=25.0",
    "pathspec>=0.12.1",
    "platformdirs>=4.5.0",
    "pydantic>=2.11.7",
    "pydantic-core>=2.33.2",
    "pyinstaller>=6.16.0",
    "pysocks>=1.7.1",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "pyyaml>=6.0.2",
    "requests>=2.32.5",
    "six>=1.17.0",
    "sniffio>=1.3.1",
    "soupsieve>=2.8",
    "sqlalchemy>=2.0.43",
    "sqlmodel>=0.0.24",
    "starlette>=0.47.3",
    "tqdm>=4.67.1",
    "typing-extensions>=4.15.0",
    "typing-inspection>=0.4.1",
    "urllib3>=2.5.0",
    "uvicorn[standard]>=0.35.0",
    "uvloop>=0.21.0",
    "watchfiles>=1.1.0",
    "websockets>=15.0.1",
    "yt-dlp>=2025.8.27",
]

[project.urls]
Home = "https://github.com/Zzackllack/AniBridge"
Tracker = "https://github.com/Zzackllack/AniBridge/issues"

[tool.setuptools.packages.find]
where = ["app"]

